AboutPage spacing fixes

--- a/src/sections/About/about.scss
+++ b/src/sections/About/about.scss
@@ -62,7 +62,7 @@
   align-items: center;
   height: 100%;
   position: relative;
-  margin-top: 3rem;
+  margin-top: 0;
 
   @media #{$xxl} {
     min-width: 50%;
@@ -74,7 +74,7 @@
     font-size: 25px;
     font-weight: 500;
     text-align: center;
-    margin: 2rem 0;
+    margin: 0 0 2rem 0;
   }
 
   .ex-content {
@@ -146,7 +146,7 @@
 /*--Principle Message css--*/
 
 .Principal{
-  padding-top: 4rem;
+  padding-top: 5rem;
   @media #{$sm,$md} {
     padding-top: 2rem;
   }
@@ -155,7 +155,7 @@
     font-weight: 500;
     font-size: 25px;
     text-align: center;
-    margin-bottom: 2rem;
+    margin-bottom: 3rem;
   }
   @-webkit-keyframes ripple-white {
     0% {
@@ -468,9 +468,7 @@
     color: #000000;
     font-size: 25px;
     font-weight: 500;
-    margin: 2rem 0;
-    position: absolute;
-    bottom: 106%;
+    margin: -1rem 0 2rem 0;
 
     @media #{$_3xl} {
 
@@ -479,8 +477,7 @@
 
     }
     @media #{$sm,$md}{
-      position: static;
-      bottom: 0;
+       margin-top: 2rem;
     }
     @media #{$lsm}{
 
