--- a/src/sections/Home/InfoTabs/InfoTabs.scss
+++ b/src/sections/Home/InfoTabs/InfoTabs.scss
@@ -19,6 +19,10 @@
           font-size: 22px;
           margin-top: 0;
         }
+      
+        @media #{$xxl} {
+          margin-top: -9rem;
+        }
         // @media #{$lg} {
         // }
         //@media #{$_2xl} {
